src/main/java/com/example/transfolio/common/error/ErrorEnum.java
package com.example.transfolio.common.error;

import org.json.simple.JSONObject;

public interface ErrorEnum {

    String getStatus();
    String getMessage();
}
